--- a/Application-Properties/pom.xml
+++ b/Application-Properties/pom.xml
@@ -20,6 +20,9 @@
     </properties>
 
     <dependencies>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
     </dependencies>
 </project>
