--- a/JUnit4-Tests/pom.xml
+++ b/JUnit4-Tests/pom.xml
@@ -50,5 +50,11 @@
             <version>2.0.9</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-reflect</artifactId>
+            <version>2.0.9</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
