--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>Application-Properties</module>
         <module>Profiles</module>
         <module>JUnit4-Tests</module>
+        <module>Testing-Libraries</module>
     </modules>
     <name>spring-boot-examples</name>
     <url>https://howtodoinjava.com</url>
