--- a/Testing-Libraries/pom.xml
+++ b/Testing-Libraries/pom.xml
@@ -47,5 +47,11 @@
             <artifactId>reactor-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.easymock</groupId>
+            <artifactId>easymock</artifactId>
+            <version>4.3</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
