--- a/Testing-Libraries/pom.xml
+++ b/Testing-Libraries/pom.xml
@@ -53,5 +53,10 @@
             <version>4.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jmockit</groupId>
+            <artifactId>jmockit</artifactId>
+            <version>1.49</version>
+        </dependency>
     </dependencies>
 </project>
