--- a/Actuator-Demo/src/main/resources/application.properties
+++ b/Actuator-Demo/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 management.endpoints.web.exposure.include=info
 management.info.env.enabled=true
+management.info.build.enabled=true
+management.info.git.enabled=true
+management.info.java.enabled=true
+management.info.os.enabled=true
 info.application.name=Actuator info
-info.application.description=A demo Spring project with information
+info.application.description=A demo Spring Project with information
 info.organization=How to do in Java
 info.java-version=${java.version}
 info.java-vendor=${java.vendor}
+
