--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,10 @@
         <module>JUnit4-Tests</module>
         <module>Testing-Libraries</module>
         <module>Spring-Boot-Filters</module>
+        <module>springboot-graphql-main</module>
+        <module>social-connect-spring-boot-starter</module>
+        <module>spring-angular-application-example/SpringBootApplication
+        </module>
     </modules>
     <name>spring-boot-examples</name>
     <url>https://howtodoinjava.com</url>
@@ -22,7 +26,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.0</version>
+        <version>3.0.0</version>
     </parent>
 
     <properties>
@@ -39,10 +43,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
@@ -77,18 +77,6 @@
                 <plugin>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.22.2</version>
-                    <configuration>
-                        <suiteXmlFiles>
-                            <suiteXmlFile>
-                                src\test\resources\hello_testng_suite.xml
-                            </suiteXmlFile>
-                        </suiteXmlFiles>
-                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
