--- a/social-connect-spring-boot-starter/src/main/resources/application.properties
+++ b/social-connect-spring-boot-starter/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-social-connect.debug=true
+social-connect.debug=false
 social-connect.oauth.consumer-key=your-consumer-key-here
 social-connect.oauth.consumer-secret=your-consumer-secret-here
