--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         </module>
         <module>Spring-Validation</module>
         <module>spring-boot-docker-minikube</module>
+        <module>multiple-dataSources</module>
     </modules>
     <name>spring-boot-examples</name>
     <url>https://howtodoinjava.com</url>
