--- a/multiple-dataSources/src/main/resources/application.properties
+++ b/multiple-dataSources/src/main/resources/application.properties
@@ -1,11 +1,15 @@
-#Users Database
-spring.datasource.url=jdbc:h2:mem:userdb
+######## USER DATASOURCE CONFIGURATION #############
+spring.datasource.url=jdbc:h2:mem:users;DB_CLOSE_DELAY=-1;\
+  DATABASE_TO_UPPER=false;INIT=CREATE SCHEMA IF NOT EXISTS users;
 spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driverClassName=org.h2.Driver
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#Orders Database
-spring.datasource.order.url=jdbc:h2:mem:ordersdb
+spring.datasource.password=password
+######## ORDER DATASOURCE CONFIGURATION #############
+spring.datasource.order.url=jdbc:h2:mem:orders;DB_CLOSE_DELAY=-1;\
+  DATABASE_TO_UPPER=false;INIT=CREATE SCHEMA IF NOT EXISTS orders;
 spring.datasource.order.username=sa
-spring.datasource.order.password=
-spring.datasource.order.driverClassName=org.h2.Driver
+spring.datasource.order.password=password
+spring.h2.console.enabled=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
