--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
         <module>spring-boot-docker-minikube</module>
         <module>multiple-dataSources</module>
         <module>spring-boot-vuejs/Spring-Boot-API</module>
-        <module>spring-data-dynamodb-example</module>
+        <module>spring-data-dynamodb</module>
     </modules>
     <name>spring-boot-examples</name>
     <url>https://howtodoinjava.com</url>
