--- a/spring-data-dynamodb/src/main/resources/application.properties
+++ b/spring-data-dynamodb/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 aws.dynamodb.endpoint=http://localhost:8000
 aws.accessKey=accessKey
 aws.secretKey=secretKey
+setting spring.main.allow-bean-definition-overriding=true
 
