MongoDb Config Demo

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>multiple-dataSources</module>
         <module>spring-boot-vuejs/Spring-Boot-API</module>
         <module>spring-data-dynamodb</module>
+        <module>spring-boot-mongodb-crud</module>
     </modules>
     <name>spring-boot-examples</name>
     <url>https://howtodoinjava.com</url>
