--- a/spring-boot-mongodb-crud/src/main/resources/application.properties
+++ b/spring-boot-mongodb-crud/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=groceryitems
-#spring.data.mongodb.password= (optional)
-#spring.data.mongodb.username= (optional)
+spring.data.mongodb.database=items
+#spring.data.mongodb.password=
+#spring.data.mongodb.username=
