--- a/spring-boot-mongodb-crud/src/main/resources/application.properties
+++ b/spring-boot-mongodb-crud/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=items
-#spring.data.mongodb.password=
-#spring.data.mongodb.username=
+spring.data.mongodb.database=testdb
+spring.data.mongodb.username=mongoadmin
+spring.data.mongodb.password=secret
+spring.data.mongodb.authentication-database=admin
+#
+#spring.data.mongodb.uri="mongodb://mongoadmin:secret@localhost:27017/testdb"
