--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>Application-Properties</module>
         <module>Profiles</module>
+        <module>spring-boot-vuejs-jwt-auth/Spring-Boot-API</module>
         <module>JUnit4-Tests</module>
         <module>Testing-Libraries</module>
         <module>Spring-Boot-Filters</module>
