--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <module>spring-boot-vuejs/Spring-Boot-API</module>
         <module>spring-data-dynamodb</module>
         <module>spring-boot-mongodb-crud</module>
+      <module>spring-boot-resilience4j</module>
     </modules>
     <name>spring-boot-examples</name>
     <url>https://howtodoinjava.com</url>
