--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <module>spring-data-dynamodb</module>
         <module>spring-boot-mongodb-crud</module>
       <module>spring-boot-resilience4j</module>
+      <module>spring-boot-load-initial-data</module>
     </modules>
     <name>spring-boot-examples</name>
     <url>https://howtodoinjava.com</url>
