--- a/spring-boot-load-initial-data/src/main/resources/application.properties
+++ b/spring-boot-load-initial-data/src/main/resources/application.properties
@@ -3,9 +3,14 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+#spring.jpa.hibernate.ddl-auto=none
+#spring.sql.init.schema-locations=classpath:sql/schema.sql
+#spring.sql.init.data-locations=classpath:sql/data.sql
 
 #spring.sql.init.mode=always
 #spring.jpa.hibernate.ddl-auto=none
