--- a/spring-boot-load-initial-data/pom.xml
+++ b/spring-boot-load-initial-data/pom.xml
@@ -28,6 +28,10 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
