--- a/spring-angular-application-example/SpringBootApplication/pom.xml
+++ b/spring-angular-application-example/SpringBootApplication/pom.xml
@@ -23,9 +23,17 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.41</version> <!--$NO-MVN-MAN-VER$-->
+            <version>8.0.32</version>
         </dependency>
     </dependencies>
 
