--- a/spring-angular-application-example/SpringBootApplication/src/main/resources/application.properties
+++ b/spring-angular-application-example/SpringBootApplication/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 #jpa config
 
 #JDBC connection properties
-spring.datasource.driver-class-name = com.mysql.jdbc.Driver
-spring.datasource.url =  jdbc:mysql://localhost:3306/howtodoinjavadb
-spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.url=jdbc:h2:file:C:/temp/test
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 
 #Hibernate properties
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
