--- a/spring-boot-load-initial-data/src/main/resources/application.properties
+++ b/spring-boot-load-initial-data/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 #spring.jpa.hibernate.ddl-auto=none
 #spring.sql.init.schema-locations=classpath:sql/schema.sql
