multipart file upload

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
+
+HELP.md
+
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
@@ -13,6 +17,9 @@ target/
 *.ipr
 
 ### Eclipse ###
+
+### STS ###
+
 .apt_generated
 .classpath
 .factorypath
@@ -20,6 +27,15 @@ target/
 .settings
 .springBeans
 .sts4-cache
+
+
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
 
 ### NetBeans ###
 /nbproject/private/
@@ -78,4 +94,6 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+
 
