Revert "spring-docker-aws module"
This reverts commit e38526f8bf63f6e9c839129708fe896aa5ce32e2.

--- a/spring-boot-keycloak-auth/Spring-Boot-API/src/main/resources/application.properties
+++ b/spring-boot-keycloak-auth/Spring-Boot-API/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 server.port=9090
 
 
-#spring.security.oauth2.client.registration.employee-api.client-id=employee-api
-#spring.security.oauth2.client.registration.employee-api.client-secret=8SBeGY3JM9xa6F3zdEcu6QHuI08bSVaH
-#spring.security.oauth2.client.registration.employee-api.scope=openid
-#spring.security.oauth2.client.registration.employee-api.redirect-uri=http://localhost:9090/login/oauth2/code/employee-api
-#spring.security.oauth2.client.registration.employee-api.authorization-grant-type=authorization_code
-#spring.security.oauth2.client.registration.employee-api.provider=keycloak
-#spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8080/auth/realms/howtodoinjava
+spring.security.oauth2.client.registration.keycloak.client-id=EmployeeRestAPI
+spring.security.oauth2.client.registration.keycloak.client-secret=OGYlvRiJw11MAB9i7Tr1Pcc09OoGLi8Y
+spring.security.oauth2.client.registration.keycloak.scope=openid
+spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration..keycloak.redirect-uri=
+spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8080/auth/realms/howtodoinjava
