--- a/spring-data-redis-lettuce/src/main/resources/application.properties
+++ b/spring-data-redis-lettuce/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 default.redis.connection=sentinel
+default.redis.TTL=60
 
 ## Standalone Config ##
+
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
 spring.data.redis.password=
@@ -9,9 +11,9 @@ spring.data.redis.timeout=3000
 
 ## Sentinel Config ##
 ## use attached docker compose to start redis is sentinel mode ###
+
 spring.data.redis.sentinel.master=mymaster
-spring.data.redis.sentinel.nodes=localhost:26379
-#Comma-separated list of "host:port" pairs.
+spring.data.redis.sentinel.nodes=localhost:26379 #Comma-separated list of "host:port" pairs.
 
 
 
