Spring Data Redis Pub/Sub

--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
     <module>spring-boot-mvc-thymeleaf</module>
     <module>spring_boot_elastic-beanstalk-aws</module>
     <module>Spring-data-redis-lettuce</module>
-    <module>spring-redis-pubsub-stream</module>
+    <module>spring-redis-pubsub</module>
   </modules>
   <name>spring-boot-examples</name>
   <url>https://howtodoinjava.com</url>
