--- a/spring-redis-pubsub/common-events-model/pom.xml
+++ b/spring-redis-pubsub/common-events-model/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.howtodoinjava.demo</groupId>
-        <artifactId>spring-redis-pubsub-stream</artifactId>
+        <artifactId>spring-redis-pubsub</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
