--- a/spring-redis-pubsub/pom.xml
+++ b/spring-redis-pubsub/pom.xml
@@ -9,12 +9,12 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>spring-redis-pubsub-stream</artifactId>
+    <artifactId>spring-redis-pubsub</artifactId>
     <packaging>pom</packaging>
     <modules>
         <module>order-events-publisher</module>
         <module>common-events-model</module>
-        <module>order-events-consumer</module>
+        <module>order-events-subscriber</module>
     </modules>
 
     <properties>
