reformat code + refactor

--- a/spring-boot-template-engines-demo/src/main/resources/application.properties
+++ b/spring-boot-template-engines-demo/src/main/resources/application.properties
@@ -2,8 +2,16 @@
 #spring.mustache.suffix=.mustache
 #spring.mustache.content-type=text/html; charset=UTF-8
 
-spring.freemarker.suffix=.ftlh
-spring.freemarker.template-loader-path=classpath:/templates/
 
-spring.mvc.view.prefix: /WEB-INF/view/
+# Thymeleaf template prefix (default: classpath:/templates/)
+spring.thymeleaf.prefix=classpath:/templates/
+# Thymeleaf template suffix (default: .html)
+spring.thymeleaf.suffix=.html
+# Enable Thymeleaf cache (default: true for production, false for development)
+spring.thymeleaf.cache=true
+
+#spring.freemarker.suffix=.ftlh
+#spring.freemarker.template-loader-path=classpath:/templates/
+
+spring.mvc.view.prefix: src/main/webapp/WEB-INF/views/
 spring.mvc.view.suffix: .jsp
