--- a/spring-boot-template-engines-demo/pom.xml
+++ b/spring-boot-template-engines-demo/pom.xml
@@ -1,4 +1,3 @@
-
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -26,6 +25,11 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mustache</artifactId>
         </dependency>
         <dependency>
@@ -42,10 +46,17 @@
             <artifactId>spring-boot-starter-groovy-templates</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>
             <!-- Other dependencies -->
             <dependency>
                 <groupId>org.apache.tomcat.embed</groupId>
                 <artifactId>tomcat-embed-jasper</artifactId>
+                <version>10.1.8</version>
             </dependency>
         <!-- https://mvnrepository.com/artifact/jstl/jstl -->
         <!-- https://mvnrepository.com/artifact/javax.servlet/jstl -->
