--- a/spring-kafka-example/inventory-event-producer/src/main/resources/application-dev.yml
+++ b/spring-kafka-example/inventory-event-producer/src/main/resources/application-dev.yml
@@ -4,26 +4,17 @@ topic:
   replicas: 1
 
 spring:
-  datasource:
-    url: jdbc:h2:mem:testdb
-    driver-class-name: org.h2.Driver
-    username: postgres
-    password: password
-    jpa:
-      database: h2
-      database-platform: org.hibernate.dialect.H2Dialect
-      generate-ddl: true
-    h2:
-      console:
-        enabled: true
   kafka:
-    topic: 'inventory-events'
+    topic: library-events
     bootstrap-servers: localhost:9092
-    consumer:
-      bootstrap-servers: localhost:9092
-      key-deserializer: org.apache.kafka.common.serialization.IntegerDeserializer
-      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
     producer:
       bootstrap-servers: localhost:9092
       key-serializer: org.apache.kafka.common.serialization.IntegerSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
+      properties:
+        acks: all
+        retries: 10
+        retry.backoff.ms: 1000
+    admin:
+      properties:
+        bootstrap.servers: localhost:9092
