Updated Spring Boot Version

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,8 @@
     <module>spring-boot-long-running-tasks</module>
     <module>spring-boot-file-upload-restapi</module>
     <module>spring-boot-vaadin-demo</module>
+    <module>spring-security-authentication-aws-cognito/AWSCognitoBasicAuthentication</module>
+    <module>search-in-keycloak-with-spring-boot</module>
   </modules>
   <name>spring-boot-examples</name>
   <url>https://howtodoinjava.com</url>
@@ -55,7 +57,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.1.0</version>
+    <version>3.1.1</version>
   </parent>
 
   <properties>
@@ -79,7 +81,7 @@
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
-    <dependency>
+    <!--<dependency>
       <groupId>org.springframework.data</groupId>
       <artifactId>spring-data-jpa</artifactId>
     </dependency>
@@ -88,15 +90,20 @@
       <artifactId>jakarta.persistence-api</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.keycloak</groupId>
-      <artifactId>keycloak-admin-client</artifactId>
-      <version>21.0.1</version>
-    </dependency>
-    <dependency>
-      <groupId>io.awspring.cloud</groupId>
-      <artifactId>spring-cloud-aws-dynamodb</artifactId>
-      <version>3.0.0</version>
-    </dependency>
+       <groupId>org.keycloak</groupId>
+       <artifactId>keycloak-admin-client</artifactId>
+       <version>21.0.1</version>
+     </dependency>
+     <dependency>
+       <groupId>io.awspring.cloud</groupId>
+       <artifactId>spring-cloud-aws-dynamodb</artifactId>
+       <version>3.0.0</version>
+     </dependency>
+     <dependency>
+       <groupId>com.amazonaws</groupId>
+       <artifactId>aws-java-sdk-core</artifactId>
+       <version>1.12.472</version>
+     </dependency>-->
   </dependencies>
 
   <build>
