--- a/spring-react-file-upload/SpringBootFileUploadApplication/pom.xml
+++ b/spring-react-file-upload/SpringBootFileUploadApplication/pom.xml
@@ -22,26 +22,30 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+          <version>3.0.4</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+          <version>3.1.0</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <scope>provided</scope>
+          <version>1.18.26</version>
+          <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
-            <scope>runtime</scope>
+          <version>3.0.4</version>
+          <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.32</version> <!--$NO-MVN-MAN-VER$-->
+            <version>8.0.33</version> <!--$NO-MVN-MAN-VER$-->
         </dependency>
     </dependencies>
     <build>
