--- a/Actuator-Demo/pom.xml
+++ b/Actuator-Demo/pom.xml
@@ -27,10 +27,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+          <version>3.1.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
+          <version>3.1.0</version>
         </dependency>
         <dependency>
             <groupId>org.testng</groupId>
@@ -41,7 +43,8 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <scope>test</scope>
+          <version>5.9.2</version>
+          <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.howtodoinjava</groupId>
@@ -51,6 +54,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+          <version>1.18.26</version>
         </dependency>
     </dependencies>
 
