--- a/Application-Properties/pom.xml
+++ b/Application-Properties/pom.xml
@@ -23,6 +23,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
+          <version>3.0.4</version>
         </dependency>
     </dependencies>
 </project>
