--- a/caching/pom.xml
+++ b/caching/pom.xml
@@ -28,6 +28,7 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
+      <version>3.0.4</version>
     </dependency>
     <dependency>
       <groupId>com.h2database</groupId>
