--- a/multiple-dataSources/pom.xml
+++ b/multiple-dataSources/pom.xml
@@ -26,6 +26,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+          <version>3.0.4</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -39,7 +40,8 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
-            <scope>runtime</scope>
+          <version>3.0.4</version>
+          <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
         <dependency>
