--- a/social-connect-spring-boot-starter/pom.xml
+++ b/social-connect-spring-boot-starter/pom.xml
@@ -34,16 +34,19 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+          <version>3.1.0</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <scope>provided</scope>
+          <version>1.18.26</version>
+          <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
+          <version>3.1.0</version>
+          <scope>test</scope>
         </dependency>
     </dependencies>
 
