--- a/spring-boot-mvc-thymeleaf/pom.xml
+++ b/spring-boot-mvc-thymeleaf/pom.xml
@@ -21,6 +21,7 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
+      <version>3.0.4</version>
     </dependency>
     <dependency>
       <groupId>com.h2database</groupId>
@@ -30,10 +31,12 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-thymeleaf</artifactId>
+      <version>3.0.4</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-devtools</artifactId>
+      <version>3.0.4</version>
     </dependency>
   </dependencies>
 </project>
