--- a/spring-boot-template-engines-demo/pom.xml
+++ b/spring-boot-template-engines-demo/pom.xml
@@ -54,7 +54,8 @@
             <dependency>
                 <groupId>org.apache.tomcat.embed</groupId>
                 <artifactId>tomcat-embed-jasper</artifactId>
-                <scope>provided</scope>
+              <version>10.1.9</version>
+              <scope>provided</scope>
             </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
