--- a/spring-boot-vaadin-demo/pom.xml
+++ b/spring-boot-vaadin-demo/pom.xml
@@ -23,6 +23,7 @@
     <dependency>
       <groupId>com.vaadin</groupId>
       <artifactId>vaadin-spring-boot-starter</artifactId>
+      <version>24.0.0</version>
     </dependency>
 
     <dependency>
