--- a/spring-boot-vuejs-jwt-auth/Spring-Boot-API/pom.xml
+++ b/spring-boot-vuejs-jwt-auth/Spring-Boot-API/pom.xml
@@ -29,10 +29,12 @@
       <dependency>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-data-jpa</artifactId>
+        <version>3.0.4</version>
       </dependency>
       <dependency>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-security</artifactId>
+        <version>3.0.4</version>
       </dependency>
     <dependency>
       <groupId>com.h2database</groupId>
