--- a/spring-boot-vuejs/Spring-Boot-API/pom.xml
+++ b/spring-boot-vuejs/Spring-Boot-API/pom.xml
@@ -25,6 +25,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+          <version>3.0.4</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
