--- a/spring-boot-xml-request-response/pom.xml
+++ b/spring-boot-xml-request-response/pom.xml
@@ -26,6 +26,7 @@
     <dependency>
       <groupId>org.glassfish.jaxb</groupId>
       <artifactId>jaxb-runtime</artifactId>
+      <version>4.0.2</version>
     </dependency>
   </dependencies>
 </project>
