--- a/spring_boot_elastic-beanstalk-aws/pom.xml
+++ b/spring_boot_elastic-beanstalk-aws/pom.xml
@@ -20,6 +20,7 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
+      <version>3.0.4</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -28,6 +29,7 @@
     <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
+      <version>42.5.4</version>
       <scope>runtime</scope>
     </dependency>
     <dependency>
