--- a/springboot-graphql-main/pom.xml
+++ b/springboot-graphql-main/pom.xml
@@ -25,6 +25,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-graphql</artifactId>
+          <version>3.0.4</version>
         </dependency>
 
         <dependency>
