response entity changes

--- a/spring-boot-response-entity-demo/src/main/resources/application.properties
+++ b/spring-boot-response-entity-demo/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/student_management?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=varsharoot
+spring.datasource.username=
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
