--- a/thymeleaf-upload-display-images/pom.xml
+++ b/thymeleaf-upload-display-images/pom.xml
@@ -3,10 +3,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.2</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <artifactId>spring-boot-examples</artifactId>
+        <groupId>com.howtodoinjava.demo</groupId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
     <groupId>com.howtodoinjava</groupId>
     <artifactId>thymeleaf-upload-display-images</artifactId>
@@ -51,6 +50,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
     </dependencies>
 
