Code for Spring Data Elasticsearch

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,8 @@
     <module>thymeleaf-upload-display-images</module>
     <module>rest-api-timeout</module>
       <module>podman-deployment</module>
+    <module>spring-elasticsearch-example</module>
+
   </modules>
   <name>spring-boot-examples</name>
   <url>https://howtodoinjava.com</url>
